[KARAF-6878]Fix WARNING: package org.apache.karaf.specs.locator not in java.base
(cherry picked from commit 473586c163aa3e208fa8be96cd3393b9a6623d1c)